ISSUE-2: DrawerComponent dynamic state added.

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="main">Главная</string>
+    <string name="menu">Меню</string>
+    <string name="favorites">Избранное</string>
+    <string name="cart">Корзина</string>
+    <string name="profile">Профиль</string>
+    <string name="orders">Заказы</string>
+    <string name="notifications">Уведомления</string>
+    <string name="about">О программе</string>
 </resources>
