--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,11 @@
 <resources>
-    <string name="app_name">SB Delivery</string>
-    <string name="main">Main</string>
+    <string name="app_name" translatable="false">SB Delivery</string>
+    <string name="main">Home</string>
+    <string name="menu">Menu</string>
+    <string name="favorites">Favorites</string>
+    <string name="cart">Cart</string>
+    <string name="profile">Profile</string>
+    <string name="orders">Orders</string>
+    <string name="notifications">Notifications</string>
+    <string name="about">About</string>
 </resources>
