--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,13 @@
     <string name="orders">Orders</string>
     <string name="notifications">Notifications</string>
     <string name="about">About</string>
+    <string name="server_error">Server Error</string>
+    <string name="unknown_host_error">Unknown host error</string>
+    <string name="connection_error">Connection error</string>
+    <string name="service_unavailable">Servise unavailable</string>
+    <string name="email" translatable="false">E-mail</string>
+    <string name="password">Password</string>
+    <string name="sign_in">Sign in</string>
+    <string name="sign_up">Sign up</string>
+    <string name="forgot_password">Forgot password?</string>
 </resources>
